Рефакторинг на jupiter